# gicr-midgard2

./: .gitignore  Makefile.am  README  configure.in  gicr-midgard2.pc.in
examples/: .gitignore  Makefile.am  example_binary  import_example.xml  midgard2.conf  node_property.vala  session_import.vala  session_login.vala
src/: Item.vala  Makefile.am  Node.vala  Property.vala  Repository.vala  RepositoryFactory.vala  Session.vala  XMLDocumentViewImporter.vala  XMLImporter.vala  XMLImporterFactory.vala  XMLSystemViewImporter.vala
src/impl/: HelperType.vala  NameMapper.vala  Path.vala
